--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2818,6 +2818,7 @@ category.cookies=Galetes
 category.custom-dialogs=Quadres de diàleg personalitzats
 category.data-integration=Integració de dades
 category.data-providers=Proveïdors de dades
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desenvolupament
 category.devices=Dispositius
 category.digital-signature=Signatura digital
@@ -4897,6 +4898,7 @@ default-logout-page=Pàgina de sortida per defecte
 default-logout-page-help=Es redireccionarà a aquesta pàgina a tots els usuaris després de desconnectar-se. Per exemple, si voleu que la pàgina de sortida per defecte sigui http://localhost:8080/web/guest/logout, introduïu-ho com a /web/guest/logout.
 default-max-connections-per-route=Connexions màximes predeterminades per ruta
 default-page-audit-image-alt-description=Imatge de l'auditoria de pàgina per defecte.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferències per defecte
 default-product-display-page=Pàgina de visualització del producte per defecte
 default-regular-theme=Tema habitual per defecte
@@ -14052,6 +14054,7 @@ select-portlet=Seleccioneu un mòdul de portal
 select-product-display-page=Seleccioneu pàgina de visualització de producte
 select-product-group=Seleccioneu un grup de productes
 select-production-to-review-the-change=Seleccioneu la producció per revisar el canvi.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Seleccioneu una pregunta
 select-radius=Seleccioneu el radi
 select-reassign-to-retry=Seleccioneu "Reassigna" per reintentar-ho.
