--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -2818,6 +2818,7 @@ category.cookies=کوکی ها
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=ادغام داده ها (Automatic Translation)
 category.data-providers=ارائه دهندگان داده ها (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=توسعه
 category.devices=دستگاه ها
 category.digital-signature=امضای دیجیتال (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=صفحه‌ی پیش‌فرض خروج از سیستم
 default-logout-page-help=کاربران به‌طور مستقیم پس از خروج به این صفحه هدایت می‌شوند. برای مثال اگر می‌خواهید صفحه خروج به صورت پیش‌فرض http://localhost:8080/web/guest/logout باشد، این را در /web/guest/logout تنظیم نمایید.
 default-max-connections-per-route=اتصالات پیش فرض حداکثر در هر مسیر (Automatic Translation)
 default-page-audit-image-alt-description=تصویر ممیزی صفحه پیش فرض. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=تنظیمات پیش‌فرض
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=تم معمول پیش‌فرض
@@ -14050,6 +14052,7 @@ select-portlet=انتخاب پرتلت
 select-product-display-page=صفحه نمایش محصولات را انتخاب کنید
 select-product-group=انتخاب گروه محصول (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=انتخاب سوال
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry="تغییر جنسیت" را برای بازآموزی انتخاب کنید. (Automatic Translation)
