--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=डेटा एकीकरण
 category.data-providers=डेटा प्रदाता (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=डेवेलपमेंट
 category.devices=उपकरणों (Automatic Translation)
 category.digital-signature=डिजिटल सिग्नेचर (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=डिफ़ॉल्ट लॉगआउट पेज
 default-logout-page-help=यह वह पृष्ठ है जिसे लॉग आउट करने के बाद उपयोगकर्ताओं को स्वचालित रूप से रीडायरेक्ट किया जाता है। उदाहरण के लिए, यदि आप चाहते हैं कि डिफ़ॉल्ट लॉगआउट पेज http://localhost:8080/web/guest/logout हो, तो इसे /web/guest/logout पर सेट करें । (Automatic Translation)
 default-max-connections-per-route=प्रति रूट डिफ़ॉल्ट अधिकतम कनेक्शन (Automatic Translation)
 default-page-audit-image-alt-description=डिफ़ॉल्ट पेज ऑडिट छवि। (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=डिफ़ॉल्ट वरीयताएँ
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=डिफ़ॉल्ट नियमित थीम
@@ -14050,6 +14052,7 @@ select-portlet=पोर्ट्लेट का चयन करें
 select-product-display-page=उत्पाद प्रदर्शन पेज का चयन करें (Automatic Translation)
 select-product-group=उत्पाद समूह का चयन करें (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=प्रश्न का चयन करें (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=पुनः प्रयास करने के लिए 'रीअसाइनमेंट' चुनें। (Automatic Translation)
