--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=שילוב נתונים (Automatic Translation)
 category.data-providers=ספקי נתונים (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=פיתוח
 category.devices=מכשירים
 category.digital-signature=חתימה דיגיטלית (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=ברירת מחדל של דף יציאה
 default-logout-page-help=זהו הדף שאליו משתמשים מנותבים אוטומטית לאחר היציאה. למשל, אם אתה מעוניין שדף היציאה המוגדר כברירת מחדל יהיה http://localhost:8080/web/guest/logout הגדר אותו כ-/web/guest/logout.
 default-max-connections-per-route=מספר קישורים מרבי לנתיב כברירת מחדל
 default-page-audit-image-alt-description=תמונת ברירת מחדל של ביקורת דף. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=העדפות לפי ברירת מחדל
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=ברירת מחדל של נושא רגיל
@@ -14050,6 +14052,7 @@ select-portlet=בחר פורטלט
 select-product-display-page=בחר דף תצוגת מוצר
 select-product-group=בחר קבוצת מוצרים (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=בחר שאלה
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=בחר 'הקצאה מחדש' כדי לנסות שנית. (Automatic Translation)
