--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookie
 category.custom-dialogs=カスタムダイアログ
 category.data-integration=データ統合
 category.data-providers=データプロバイダー
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=開発
 category.devices=デバイス
 category.digital-signature=デジタル署名
@@ -4897,6 +4898,7 @@ default-logout-page=ログアウトページ
 default-logout-page-help=このページはユーザーがログアウト後に自動的にリダイレクトされるページになります。例えば、http://localhost:8080/web/guest/logoutをデフォルトのログアウト後ページにしたい場合、/web/guest/logoutと設定してください。
 default-max-connections-per-route=ルートごとのデフォルト最大接続数
 default-page-audit-image-alt-description=デフォルトのページ監査画像です。
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=デフォルトの表示設定
 default-product-display-page=デフォルトの商品表示ページ
 default-regular-theme=デフォルトテーマ
@@ -14052,6 +14054,7 @@ select-portlet=ポートレットの選択
 select-product-display-page=製品表示ページを選択
 select-product-group=製品グループを選択
 select-production-to-review-the-change=変更を確認する本番環境を選択します。
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=質問を選択
 select-radius=半径を選択
 select-reassign-to-retry=再試行するには「再割り当て」を選択してください。
