--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies
 category.custom-dialogs=Aangepaste dialoogvensters
 category.data-integration=Data-integratie
 category.data-providers=Dataproviders
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Ontwikkeling
 category.devices=Apparaten
 category.digital-signature=Digitale handtekening
@@ -4897,6 +4898,7 @@ default-logout-page=Standaardafmeldpagina
 default-logout-page-help=Dit is de pagina waarnaar gebruikers automatisch worden doorverwezen nadat ze zijn uitgelogd. Als u de standaardafmeldpagina bijvoorbeeld wilt instellen als http://localhost:8080/web/guest/logout dient u hier /web/guest/logout in te vullen.
 default-max-connections-per-route=Standaard max. aantal verbindingen per route
 default-page-audit-image-alt-description=Standaardafbeelding voor paginacontrole.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standaardvoorkeuren
 default-product-display-page=Standaard weergavepagina product
 default-regular-theme=Standaardopmaakset
@@ -14053,6 +14055,7 @@ select-portlet=Portlet selecteren
 select-product-display-page=Pagina voor productweergave selecteren
 select-product-group=Productgroep selecteren
 select-production-to-review-the-change=Selecteer de productie om de wijziging te controleren.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Vraag selecteren
 select-radius=Radius selecteren
 select-reassign-to-retry=Selecteer 'Opnieuw toewijzen' om opnieuw te proberen.
