--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integracija podatkov (Automatic Translation)
 category.data-providers=Ponudniki podatkov (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Razvoj
 category.devices=Naprave (Automatic Translation)
 category.digital-signature=Digitalni podpis (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Privzeta stran za odjava (Automatic Translation)
 default-logout-page-help=To je stran, na ki jo uporabniki samodejno preusmerijo po odjavanju. Če na primer želite, da je privzeta odjavna stran http://localhost:8080/web/guest/logout, nastavite na /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Privzete največje povezave na pot (Automatic Translation)
 default-page-audit-image-alt-description=Privzeta slika za nadzor strani. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Privzete nastavitve
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Privzeta navadna tema (Automatic Translation)
@@ -14050,6 +14052,7 @@ select-portlet=Izberi portlet
 select-product-display-page=Izberite stran za prikaz izdelka (Automatic Translation)
 select-product-group=Izberite skupino izdelkov (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Izberite vprašanje (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Izberite »Ponovno dodeli«. (Automatic Translation)
