--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies
 category.custom-dialogs=Anpassade dialoger
 category.data-integration=Dataintegrering
 category.data-providers=Dataproviders
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Utveckling
 category.devices=Enheter
 category.digital-signature=Digital underskrift
@@ -4897,6 +4898,7 @@ default-logout-page=Utloggningssida
 default-logout-page-help=Det här är sidan som användare omdirigeras till automatiskt när de loggar ut. Om du exempelvis vill att den förinställda utloggningssidan ska vara http://localhost:8080/web/guest/logout anger du /web/guest/logout.
 default-max-connections-per-route=Standard för maximalt antal anslutningar per flöde
 default-page-audit-image-alt-description=Bild för förinställd sidgranskning.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Startinställningar
 default-product-display-page=Visningssida för standardprodukt
 default-regular-theme=Standardtema
@@ -14050,6 +14052,7 @@ select-portlet=Välj portlet
 select-product-display-page=Välj produktens visningssida
 select-product-group=Välj produktgrupp
 select-production-to-review-the-change=Välj produkt för att granska ändringen.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Välj fråga
 select-radius=Välj radie
 select-reassign-to-retry=Välj 'Tilldela igen' och försök igen.
