--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Tích hợp dữ liệu (Automatic Translation)
 category.data-providers=Nhà cung cấp dữ liệu (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Phát triển
 category.devices=Thiết bị (Automatic Translation)
 category.digital-signature=Chữ ký điện tử (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Địa chỉ đăng xuất mặc định
 default-logout-page-help=Đây là trang mà người dùng được tự động chuyển hướng đến sau khi đăng xuất. Ví dụ: nếu bạn muốn trang đăng xuất mặc định được http://localhost:8080/web/guest/logout, hãy đặt trang này thành /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Kết nối Tối đa Mặc định trên mỗi Tuyến đường (Automatic Translation)
 default-page-audit-image-alt-description=Ảnh Kiểm tra Trang Mặc định. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Cấu hình mặc định
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Giao diện mặc định
@@ -14050,6 +14052,7 @@ select-portlet=Chọn ứng dụng (portlet)
 select-product-display-page=Chọn Trang hiển thị sản phẩm (Automatic Translation)
 select-product-group=Chọn Nhóm Sản phẩm (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Chọn câu hỏi
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Chọn "Chỉ định lại" để thử lại. (Automatic Translation)
