--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2818,6 +2818,7 @@ category.cookies=ملفات تعريف الارتباط
 category.custom-dialogs=مربعات حوار مخصصة
 category.data-integration=تكامل البيانات
 category.data-providers=موفرو البيانات
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=تطوير
 category.devices=الأجهزة
 category.digital-signature=التوقيع الرقمي
@@ -4897,6 +4898,7 @@ default-logout-page=صفحة تسجيل الخروج الافتراضية
 default-logout-page-help=هذه هي الصفحة التي تتم إعادة توجيه المستخدمين تلقائيًا إليها بعد تسجيل الخروج. على سبيل المثال، إذا كنت تريد أن تكون صفحة تسجيل الخروج الافتراضية http://localhost:8080/web/guest/logout، فقم بتعيينها إلى /web/guest/logout.
 default-max-connections-per-route=الاتصالات القصوى الافتراضية لكل طريق
 default-page-audit-image-alt-description=صورة تدقيق الصفحة الافتراضية.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=التفضيلات الإعتيادية
 default-product-display-page=صفحة عرض المنتج الافتراضية
 default-regular-theme=تشكيلة الموقع الافتراضية
@@ -14050,6 +14052,7 @@ select-portlet=إختر بورتلت
 select-product-display-page=تحديد صفحة عرض المنتج
 select-product-group=تحديد مجموعة المنتج
 select-production-to-review-the-change=تحديد الإنتاج لمراجعة التغيير.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=اختر سؤالا
 select-radius=تحديد نصف القطر
 select-reassign-to-retry=حدد 'إعادة تعيين' لإعادة المحاولة.
