--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrace dat (Automatic Translation)
 category.data-providers=Poskytovatelé dat (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Vývoj
 category.devices=zařízení (Automatic Translation)
 category.digital-signature=Digitální podpis (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Výchozí stránka po odhlášení
 default-logout-page-help=Toto je stránka, na kterou jsou uživatelé po odhlášení automaticky přesměrováni. Chcete-li například použít výchozí stránku odhlášení, nastavte http://localhost:8080/web/guest/logout /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Výchozí maximální počet připojení na trasu (Automatic Translation)
 default-page-audit-image-alt-description=Výchozí obrázek auditu stránky. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Výchozí vlastnosti
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Výchozí běžné téma
@@ -14050,6 +14052,7 @@ select-portlet=Vybrat portlet
 select-product-display-page=Vybrat stránku zobrazení produktu (Automatic Translation)
 select-product-group=Vybrat skupinu produktů (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Vybrat otázku
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Chcete-li akci opakovat, vyberte možnost Přeřadit. (Automatic Translation)
