--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Ενοποίηση δεδομένων (Automatic Translation)
 category.data-providers=Υπηρεσίες παροχής δεδομένων (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Ανάπτυξη
 category.devices=Συσκευές (Automatic Translation)
 category.digital-signature=Ψηφιακή υπογραφή (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Προκαθορισμένη σελίδα εξόδου
 default-logout-page-help=Αυτή είναι η σελίδα στην οποία ανακατευθύνονται αυτόματα οι χρήστες μετά την αποσύνδεση. Για παράδειγμα, εάν θέλετε να http://localhost:8080/web/guest/logout η προεπιλεγμένη σελίδα αποσύνδεσης, ορίστε αυτήν την επιλογή σε /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Προεπιλεγμένες μέγιστες συνδέσεις ανά διαδρομή (Automatic Translation)
 default-page-audit-image-alt-description=Προεπιλεγμένη εικόνα ελέγχου σελίδας. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Προκαθορισμένες προτιμήσεις
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Προκαθορισμένο κανονικό θέμα
@@ -14050,6 +14052,7 @@ select-portlet=Επιλογή portlet
 select-product-display-page=Επιλογή σελίδας εμφάνισης προϊόντος (Automatic Translation)
 select-product-group=Επιλογή ομάδας προϊόντων (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Επιλογή ερώτησης
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Επιλέξτε "Εκ νέου εκχώρηση" για να επαναλάβετε τη διατρήση. (Automatic Translation)
