--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2818,6 +2818,7 @@ category.cookies=Evästeet
 category.custom-dialogs=Mukautetut valintaikkunat
 category.data-integration=Dataintegraatio
 category.data-providers=Tietolähteet
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Kehitys
 category.devices=Laitteet
 category.digital-signature=Digitaalinen allekirjoitus
@@ -4897,6 +4898,7 @@ default-logout-page=Oletus uloskirjautumissivu
 default-logout-page-help=Tämä on sivu, mihin käyttäjät automaattisesti ohjataan sisäänkirjautumisen jälkeen. Esimerkiksi, jos käyttäjä uloskirjautumisen jälkeinen sivu on http://localhost:8080/web/guest/logout aseta tämä /web/guest/logout.
 default-max-connections-per-route=Oletus Maksimimäärä Yhteyksiä Reittiä Kohden
 default-page-audit-image-alt-description=Sivun Valvonnan Oletuskuva.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Oletusmääritykset
 default-product-display-page=Oletusarvoinen tuotteen näyttösivu
 default-regular-theme=Tavallinen oletusteema
@@ -14049,6 +14051,7 @@ select-portlet=Valitse portletti
 select-product-display-page=Valitse Tuotteen Näytösivu
 select-product-group=Valitse Tuoteryhmä
 select-production-to-review-the-change=Valitse tuotanto muutoksen tarkistamiseksi.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Valitse kysymys
 select-radius=Valitse säde
 select-reassign-to-retry=Valitse "Määritä uudelleen" yrittääksesi uudelleen.
