--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookie-k
 category.custom-dialogs=Egyéni párbeszédablakok
 category.data-integration=Adatintegráció
 category.data-providers=Adatszolgáltatók
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Fejlesztés
 category.devices=Eszközök
 category.digital-signature=Digitális aláírás
@@ -4897,6 +4898,7 @@ default-logout-page=Alapértelmezett kilépő oldal
 default-logout-page-help=A felhasználók kijelentkezés után erre az oldalra kerülnek átirányításra. Például, ha azt szeretnéd, hogy az alapértelmezett kilépő oldal ez legyen: http://localhost:8080/web/guest/logout, állítsd be ezt: /web/guest/logout.
 default-max-connections-per-route=Kapcsolatok útvonalankénti alapértelmezett maximális száma
 default-page-audit-image-alt-description=Alapértelmezett oldalaudit kép.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Alapértelmezett beállítások
 default-product-display-page=Az alapértelmezett termék megjelenítő oldala
 default-regular-theme=Általános téma
@@ -14053,6 +14055,7 @@ select-portlet=Portlet kijelölése
 select-product-display-page=Válasszon termékmegjelenítési oldalt
 select-product-group=Termékcsoport kiválasztása
 select-production-to-review-the-change=A változás megtekintéséhez válassza ki a termelést.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Kérdés kiválasztása
 select-radius=Sugár kiválasztása
 select-reassign-to-retry=Újrapróbálkozáshoz válassza az "Átirányítás" lehetőséget.
