--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=데이터 통합 (Automatic Translation)
 category.data-providers=데이터 공급자 (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=발달
 category.devices=장치 (Automatic Translation)
 category.digital-signature=디지털 서명 (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=과태 로그아웃 페이지
 default-logout-page-help=이 페이지는 사용자가 로그아웃 한 후 자동으로 리디렉션되는 페이지입니다. 예를 들어 기본 로그아웃 페이지를 http://localhost:8080/web/guest/logout 하려면 /web/guest/logout으로 설정합니다. (Automatic Translation)
 default-max-connections-per-route=경로당 기본 최대 연결 (Automatic Translation)
 default-page-audit-image-alt-description=기본 페이지 감사 이미지입니다. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=과태 특혜
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=과태 정규병 주제
@@ -14050,6 +14052,7 @@ select-portlet=Portlet을 선정하십시요
 select-product-display-page=제품 표시 페이지 선택 (Automatic Translation)
 select-product-group=제품 그룹 선택 (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=질문 선택 (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=다시 시도할 '재할당'을 선택합니다. (Automatic Translation)
