--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrering av data (Automatic Translation)
 category.data-providers=Datatilbydere
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Utvikling
 category.devices=Enheter
 category.digital-signature=Digital signatur (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Standard utloggingsside
 default-logout-page-help=Dette er siden som brukere automatisk omadresseres til etter at de har logget av. Hvis du for eksempel vil at standard avloggingsside skal være http://localhost:8080/web/guest/logout, setter du dette til /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Standard maks antall tilkoblinger per rute (Automatic Translation)
 default-page-audit-image-alt-description=Standard bilde av sideovervåking. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standardinnstillinger
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Standardtema
@@ -14050,6 +14052,7 @@ select-portlet=Velg portlet
 select-product-display-page=Velg produktvisningsside (Automatic Translation)
 select-product-group=Velg Produktgruppe (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Velg spørsmål
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Velg Tilordne på nytt for å prøve på nytt. (Automatic Translation)
