--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrare date (Automatic Translation)
 category.data-providers=Furnizori de date (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Dezvoltare
 category.devices=Dispozitive (Automatic Translation)
 category.digital-signature=Semnătură digitală (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Pagina de Deconectare Implicită
 default-logout-page-help=Aceasta este pagina la care utilizatorii sunt redirecționați automat după deconectare. De exemplu, dacă doriți ca pagina implicită de deconectare să fie http://localhost:8080/web/guest/logout, setați acest lucru la /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Conexiuni maxime implicite per rută (Automatic Translation)
 default-page-audit-image-alt-description=Imagine audit pagină implicită. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferinte Implicite
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Temă Normala Implicită
@@ -14050,6 +14052,7 @@ select-portlet=Selecteaza Modul
 select-product-display-page=Selectare pagină de afișare a produsului (Automatic Translation)
 select-product-group=Selectare grup de produse (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Selectare întrebare (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Selectați "Reatribuire" pentru a reîncerca. (Automatic Translation)
