--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrácia údajov (Automatic Translation)
 category.data-providers=Poskytovatelia údajov (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Vývoj
 category.devices=Zariadenia (Automatic Translation)
 category.digital-signature=Digitálny podpis (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Predvolená odhlasovacia stránka
 default-logout-page-help=Na túto stránku bude používateľ automaticky presmerovaný po odhlásení. Napríklad, ak chcete aby predvolená odhlasovacia stránka bola http://localhost:8080/web/guest/logout, nastavte toto na /web/guest/logout.
 default-max-connections-per-route=Predvolené maximálne pripojenia na trasu (Automatic Translation)
 default-page-audit-image-alt-description=Obrázok predvoleného auditu strany. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Predvolené nastavenia
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Predvolená bežná téma
@@ -14050,6 +14052,7 @@ select-portlet=Vybrať portlet
 select-product-display-page=Vybrať stránku zobrazenia produktu (Automatic Translation)
 select-product-group=Vyberte skupinu produktov (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Vybrať otázku
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Ak chcete to skúsiť znova, vyberte možnosť Znova priradiť. (Automatic Translation)
