--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=การผนวกรวมดาต้า
 category.data-providers=ผู้ให้บริการข้อมูล
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=การพัฒนา
 category.devices=อุปกรณ์
 category.digital-signature=ลายมือชื่อดิจิทัล
@@ -4897,6 +4898,7 @@ default-logout-page=ค่าเริ่มต้นของหน้าออ
 default-logout-page-help=นี่คือหน้าของผู้ใช้ที่จะถูกเปลี่ยนรีไดเร็คไปโดยอัตโนมัติหลังจากออกจากระบบ ตัวอย่างเช่น หากต้องการให้หน้าออกจากระบบเริ่มต้นเป็น http://localhost:8080/web/guest/logout ให้ตั้งค่านี้เป็น /web/guest/logout
 default-max-connections-per-route=ค่าเริ่มต้นของการเชื่อมต่อสูงสุดต่อเส้นทาง
 default-page-audit-image-alt-description=ตรวจสอบค่าเริ่มต้นของรูปภาพ
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=ค่ากำหนดเริ่มต้น
 default-product-display-page=หน้าแสดงผลิตภัณฑ์เริ่มต้น
 default-regular-theme=ธีมเริ่มต้น
@@ -14050,6 +14052,7 @@ select-portlet=เลือกพอร์ตเล็ต (Automatic Translation
 select-product-display-page=เลือกหน้าแสดงผลิตภัณฑ์ (Automatic Translation)
 select-product-group=เลือกกลุ่มผลิตภัณฑ์ (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=เลือกคำถาม
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=เลือก 'มอบหมายใหม่' เพื่อลองใหม่ (Automatic Translation)
