--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookie
 category.custom-dialogs=自定义对话框
 category.data-integration=数据集成
 category.data-providers=数据提供商
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=开发
 category.devices=设备
 category.digital-signature=数字签名
@@ -4897,6 +4898,7 @@ default-logout-page=默认登出页面
 default-logout-page-help=用户注销后将自动重新定向到此页面。例如，如果您想默认注销页面为 http://localhost:8080/web/guest/logout,您需设置为/web/guest/logout.
 default-max-connections-per-route=每条路线的默认最大连接数
 default-page-audit-image-alt-description=默认页面审核图像。
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=默认偏好设置
 default-product-display-page=默认产品显示页
 default-regular-theme=默认常规主题
@@ -14052,6 +14054,7 @@ select-portlet=选择Portlet
 select-product-display-page=选择产品显示页
 select-product-group=选择产品组
 select-production-to-review-the-change=选择生产以检查变更。
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=选择问题
 select-radius=选择半径
 select-reassign-to-retry=选择"重新分配"以重试。
