--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=資料整合
 category.data-providers=資料提供者
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=開發
 category.devices=設備
 category.digital-signature=數位簽章
@@ -4897,6 +4898,7 @@ default-logout-page=預設登出頁面
 default-logout-page-help=這是使用者登出後被自動導向的頁面。例如，如果您想要預設登出頁面是http://localhost:8080/web/guest/logout，設定這到/web/guest/logout。
 default-max-connections-per-route=每條路線的預設最大連線數
 default-page-audit-image-alt-description=預設頁面審核圖檔。
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=預設偏好
 default-product-display-page=預設商品顯示頁
 default-regular-theme=預設一般背景主題
@@ -14051,6 +14053,7 @@ select-portlet=選擇Portlet
 select-product-display-page=選擇商品顯示頁
 select-product-group=選擇商品群組
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=選擇問題
 select-radius=選擇半徑
 select-reassign-to-retry=選擇 "重新分派" 以重試。
