--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -13983,6 +13983,7 @@ select-css-client-extensions=Seleccioneu extensions de client CSS
 select-data-fields=Selecciona els camps de dades
 select-date=Seleccioneu una data
 select-date-range=Seleccioneu l'interval de dates
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Selecciona la destinació
 select-destination-folder-for-x-item=Selecciona la carpeta de destí de {0} element/s
 select-destination-folder-for-x-items=Seleccioneu la carpeta de destí de {0} elements.
