--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -13981,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Select Data Fields (Automatic Copy)
 select-date=Aukeratu data
 select-date-range=Select Date Range (Automatic Copy)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Helburua hautatu
 select-destination-folder-for-x-item=Aukeratu helburu-karpeta elementu {0}etarako
 select-destination-folder-for-x-items=Aukeratu helburu-karpeta {0} elementutarako
