--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -13981,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=انتخاب زمینه های داده (Automatic Translation)
 select-date=انتخاب تاریخ
 select-date-range=محدوده تاریخ را انتخاب کنید (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=پوشه مقصد را برای {0} مورد انتخاب کنید
 select-destination-folder-for-x-items=پوشه مقصد را برای {0} مورد انتخاب کنید
