--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -13984,6 +13984,7 @@ select-css-client-extensions=CSS ügyfél-kiterjesztések kiválasztása
 select-data-fields=Válasszon adatmezőket
 select-date=Dátum kijelölése
 select-date-range=Kiválasztás dátumterjedelem alapján
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Cél kiválasztása
 select-destination-folder-for-x-item=Válasszon célmappát {0} elem számára
 select-destination-folder-for-x-items=Válasszon célmappát {0} elem számára
