--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -13981,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Velg datafelt (Automatic Translation)
 select-date=Velg dato
 select-date-range=Velg datointervall
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Velg målmappe for {0} ressurs
 select-destination-folder-for-x-items=Velg målmape for {0} ressurser
