--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -13981,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=เลือกเขตข้อมูล (Automatic Translation)
 select-date=เลือกวันที่ (Automatic Translation)
 select-date-range=เลือกช่วงวันที่ (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=เลือกโฟลเดอร์ปลายทางสำหรับรายการ {0}
 select-destination-folder-for-x-items=เลือกโฟลเดอร์ปลายทางสำหรับรายการ {0}
