--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -13983,6 +13983,7 @@ select-css-client-extensions=选择 CSS 客户端扩展
 select-data-fields=选择数据字段
 select-date=选择日期
 select-date-range=选择日期范围
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=选择目标
 select-destination-folder-for-x-item=选择 {0} 条目的目标文件夹
 select-destination-folder-for-x-items=为{0}条目选择目标文件夹。
