--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -13983,6 +13983,7 @@ select-css-client-extensions=Seleccionar extensiones de cliente de CSS
 select-data-fields=Seleccionar campos de datos
 select-date=Seleccionar fecha
 select-date-range=Seleccionar intervalo de fechas
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Seleccionar destino
 select-destination-folder-for-x-item=Seleccionar carpeta de destino para {0} elemento
 select-destination-folder-for-x-items=Seleccione la carpeta de destino para {0} elementos.
