--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -13983,6 +13983,7 @@ select-css-client-extensions=CSS クライアント拡張の選択
 select-data-fields=データフィールドを選択
 select-date=日時の選択
 select-date-range=日付範囲を選択
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=宛先を選択
 select-destination-folder-for-x-item={0}件の項目の目的のフォルダを選択
 select-destination-folder-for-x-items={0}件の項目の目的のフォルダを選択してください。
