--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -13981,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Select Data Fields (Automatic Copy)
 select-date=தேதி தேர்ந்தெடு
 select-date-range=Select Date Range (Automatic Copy)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item={0} அயிட்டத்திற்கு Destination ஃபோல்டர்களைத் தேர்ந்தெடுக்கவும்
 select-destination-folder-for-x-items=அயிட்டங்கள் {0} க்கான Destination ஃபோல்டரைத் தேர்ந்தெடுக்கவும்
