--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -13981,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Вибір полів даних (Automatic Translation)
 select-date=Вибрати дату
 select-date-range=Вибір діапазону дат (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
