--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -13970,6 +13970,7 @@ select-css-client-extensions=تحديد امتدادات عميل CSS
 select-data-fields=تحديد حقول البيانات
 select-date=إختر التاريخ
 select-date-range=حدد نطاق التاريخ
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=اختيار الوجهة
 select-destination-folder-for-x-item=تحديد مجلد الوجهة لـ {0} عنصر
 select-destination-folder-for-x-items=حدد مجلد الوجهة لـ {0} من العناصر.
