--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -13972,6 +13972,7 @@ select-css-client-extensions=CSS-Client-Erweiterungen auswählen
 select-data-fields=Datenfelder auswählen
 select-date=Datum auswählen
 select-date-range=Datumsbereich auswählen
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Ziel auswählen
 select-destination-folder-for-x-item=Zielordner für {0} Element auswählen
 select-destination-folder-for-x-items=Zielordner für {0} Elemente auswählen.
