--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -13969,6 +13969,7 @@ select-css-client-extensions=Valitse CSS-asiakaspäätteet
 select-data-fields=Valitse Datakentät
 select-date=Valitse päivä
 select-date-range=Valitse Päivämääräalue
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Valitse kohde
 select-destination-folder-for-x-item=Valitse Kohdekansio {0} Kohteelle
 select-destination-folder-for-x-items=Valitse Kohdekansio {0} Kohteelle.
