--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -13972,6 +13972,7 @@ select-css-client-extensions=Sélectionnez les extensions client CSS
 select-data-fields=Sélectionnez les champs de données
 select-date=Sélectionner une date
 select-date-range=Sélectionnez la plage de dates
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Sélectionner la destination
 select-destination-folder-for-x-item=Sélectionnez le dossier de destination pour {0} élément
 select-destination-folder-for-x-items=Sélectionner le dossier de destination pour {0} éléments.
