--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -13973,6 +13973,7 @@ select-css-client-extensions=CSS-clientextenties selecteren
 select-data-fields=Gegevensvelden selecteren
 select-date=Datum selecteren
 select-date-range=Datumbereik selecteren
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Bestemming kiezen
 select-destination-folder-for-x-item=Selecteer doelmap voor {0} item
 select-destination-folder-for-x-items=Selecteer doelmap voor {0} items.
