--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -13970,6 +13970,7 @@ select-css-client-extensions=Selecionar extensões CSS Client
 select-data-fields=Selecionar campos de dados
 select-date=Selecionar Data
 select-date-range=Selecionar período
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Selecionar destino
 select-destination-folder-for-x-item=Selecione a pasta de destino para {0} item
 select-destination-folder-for-x-items=Selecione a pasta de destino para {0} itens
