--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -13971,6 +13971,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=選擇資料欄位
 select-date=選擇日期
 select-date-range=選擇日期區間
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=選擇 {0} 項目的目標資料夾
 select-destination-folder-for-x-items=選擇 {0} 項目的目標資料夾
