--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -13970,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Sélectionnez les champs de données
 select-date=Sélectionner une date
 select-date-range=Sélectionnez la plage de dates
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Sélectionnez le dossier de destination pour {0} élément
 select-destination-folder-for-x-items=Sélectionner le dossier de destination pour {0} éléments.
