--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -13970,6 +13970,7 @@ select-css-client-extensions=Välj CSS-klienttillägg
 select-data-fields=Välj datafält
 select-date=Välj datum
 select-date-range=Välj datumintervall
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Välj destination
 select-destination-folder-for-x-item=Välj målmapp för {0} objekt
 select-destination-folder-for-x-items=Välj målmapp för {0} objekt.
